# terminal-tetris-c

./: CMakeLists.txt  README.md  cli.c  cli.h  draw.c  draw.h  field.c  field.h  main.c  piece-data.c  piece.c  piece.h  playfield.h  queuebag.c  queuebag.h  stats.c  stats.h  tetris.c  tetris.h  tetromino-data.c  tetromino.h
src/: draw.c  draw.h  field.c  field.h  main.c  piece-data.c  piece.c  piece.h  queuebag.c  queuebag.h  stats.c  stats.h  tetris.c  tetris.h
